@@ -7,7 +7,6 @@ import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
-import java.util.Collections;
 import java.util.List;
 
 @Mapper(componentModel = "spring")
@@ -21,10 +20,7 @@ public interface ProductMapper {
     Product toEntity(ProductRequestDto dto);
 
     default List<String> mapCategoriesToNames(List<Category> categories) {
-        if (categories == null) {
-            return Collections.emptyList();
-        }
-
+        if (categories == null) return List.of();
         return categories.stream()
                 .map(Category::getName)
                 .toList();
